--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div class="container">
-            <h1>PoKéDeX</h1>
+           <h1>PoKeDex</h1>
         </div>
 
         <div class="card-container" id="card-container">
